# Forecast-AI

./: .env.template  .gitignore  main.py  pyproject.toml
.github/workflows/: Tuderun.yml
