[tool.poetry]
name = "metac-bot-template"
version = "0.1.0"
description = ""
authors = ["Vasile Popescu <elisescu@elisescu.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-decouple = "^3.8"
requests = "^2.32.3"
asknews = "^0.11.2"
numpy = "^2.3.0"
python-dotenv = "^1.0.1"
forecasting-tools = "^0.2.54"
beautifulsoup4 = "^4.13.5"
newsapi-python = "^0.2.7"
tavily-python = "^0.7.12"
openai = "^1.108.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
